[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-secretsync"
version = "0.1.1"
description = "Declarative secret sealing & sync for GitOps — encrypt secrets safe to commit"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "secrets", "gitops", "kubernetes", "encryption", "devsecops", "cli", "cognis-neural-suite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/secretsync"

[project.scripts]
"secretsync-emit" = "secretsync.connect:emit_main"
secretsync = "secretsync.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["secretsync"]

[tool.hatch.metadata]
allow-direct-references = true
